reorganizacion de carpetas y actualización de rutas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!--Encabezado-->
@@ -20,10 +20,10 @@
       <nav class="grid-nav">
         <!--Navegación-->
         <a href="index.html">Inicio</a>
-        <a href="sobre-mi.html">Sobre Mi</a>
-        <a href="proyectos.html">Proyectos</a>
-        <a href="servicios.html">Servicios</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="pages/sobre-mi.html">Sobre Mi</a>
+        <a href="pages/proyectos.html">Proyectos</a>
+        <a href="pages/servicios.html">Servicios</a>
+        <a href="pages/contacto.html">Contacto</a>
       </nav>
       <main class="grid-main">
         <!--Bienvenida-->
