--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -20,7 +20,7 @@
 
       <!-- Navegación -->
       <nav class="grid-nav">
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="servicios.html">Servicios</a>
