--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre mí | Noelia Caballero</title>
+    <title>Proyectos | Noelia Caballero</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -17,50 +17,44 @@
         <h1>Noelia Caballero</h1>
         <p>Desarrolladora web | Frontend en formación</p>
       </header>
+
       <!-- Navegación -->
       <nav class="grid-nav">
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="servicios.html">Servicios</a>
         <a href="contacto.html">Contacto</a>
       </nav>
+
       <!-- Contenido Principal -->
       <main class="grid-main">
-        <section id="sobre-mi">
+        <section id="proyectos">
           <div class="título">
             <span class="mariposa-brillo">🦋✨</span>
-            <h2>Sobre Mí</h2>
+            <h2>Mis Proyectos</h2>
             <span class="brillo-mariposa">✨🦋</span>
           </div>
+
           <div class="container-texto flex-container">
             <div class="texto flex-item">
               <p>
-                Soy Noelia Caballero, desarrolladora web en formación con
-                enfoque en diseño frontend. Actualmente estudio en
-                <span class="resaltado">Coderhouse</span> y estoy creando mi
-                portfolio para mostrar mi progreso como futura profesional del
-                <span class="resaltado">desarrollo web</span>. Me apasiona
-                combinar creatividad y funcionalidad para construir experiencias
-                digitales memorables.
+                Estoy desarrollando diversos proyectos como parte de mi
+                formación, incluyendo sitios web responsivos, portfolios
+                personales y tiendas online. Pronto podrás ver ejemplos reales
+                aquí.
               </p>
-              <ul>
-                <li>Aprendizaje continuo en tecnologías web modernas.</li>
-                <li>Enfoque en diseño responsivo y experiencia de usuario.</li>
-                <li>
-                  Habilidades en HTML, CSS, JavaScript y frameworks básicos.
-                </li>
-              </ul>
             </div>
             <div class="imagen flex-item">
               <img
-                src="img/sobre-mi.avif"
-                alt="Desarrolladora web ilustración"
+                src="../img/mis-proyectos.avif"
+                alt="Proyectos web ilustración"
               />
             </div>
           </div>
         </section>
       </main>
+
       <!-- Footer -->
       <footer class="grid-footer">
         <p>&copy; 2025 Noelia Caballero. Todos los derechos reservados.</p>
