--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyectos | Noelia Caballero</title>
+    <title>Servicios | Noelia Caballero</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -20,7 +20,7 @@
 
       <!-- Navegación -->
       <nav class="grid-nav">
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="servicios.html">Servicios</a>
@@ -29,26 +29,31 @@
 
       <!-- Contenido Principal -->
       <main class="grid-main">
-        <section id="proyectos">
+        <section id="servicios">
           <div class="título">
             <span class="mariposa-brillo">🦋✨</span>
-            <h2>Mis Proyectos</h2>
+            <h2>Mis Servicios</h2>
             <span class="brillo-mariposa">✨🦋</span>
           </div>
 
           <div class="container-texto flex-container">
             <div class="texto flex-item">
               <p>
-                Estoy desarrollando diversos proyectos como parte de mi
-                formación, incluyendo sitios web responsivos, portfolios
-                personales y tiendas online. Pronto podrás ver ejemplos reales
-                aquí.
+                Ofrezco diseño y desarrollo de páginas web básicas, portfolios
+                para emprendedores y tiendas online en HTML/CSS. Si necesitás
+                comenzar desde cero, ¡yo te ayudo!
               </p>
+              <ul>
+                <li>Diseño y maquetación responsive.</li>
+                <li>Portfolios personales y sitios corporativos.</li>
+                <li>Tiendas online simples y funcionales.</li>
+                <li>Asesoramiento en estructura y usabilidad.</li>
+              </ul>
             </div>
             <div class="imagen flex-item">
               <img
-                src="img/mis-proyectos.avif"
-                alt="Proyectos web ilustración"
+                src="../img/mis-servicios.avif"
+                alt="Servicios de desarrollo web"
               />
             </div>
           </div>
