--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Servicios | Noelia Caballero</title>
+    <title>Sobre mí | Noelia Caballero</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -17,49 +17,50 @@
         <h1>Noelia Caballero</h1>
         <p>Desarrolladora web | Frontend en formación</p>
       </header>
-
       <!-- Navegación -->
       <nav class="grid-nav">
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="servicios.html">Servicios</a>
         <a href="contacto.html">Contacto</a>
       </nav>
-
       <!-- Contenido Principal -->
       <main class="grid-main">
-        <section id="servicios">
+        <section id="sobre-mi">
           <div class="título">
             <span class="mariposa-brillo">🦋✨</span>
-            <h2>Mis Servicios</h2>
+            <h2>Sobre Mí</h2>
             <span class="brillo-mariposa">✨🦋</span>
           </div>
-
           <div class="container-texto flex-container">
             <div class="texto flex-item">
               <p>
-                Ofrezco diseño y desarrollo de páginas web básicas, portfolios
-                para emprendedores y tiendas online en HTML/CSS. Si necesitás
-                comenzar desde cero, ¡yo te ayudo!
+                Soy Noelia Caballero, desarrolladora web en formación con
+                enfoque en diseño frontend. Actualmente estudio en
+                <span class="resaltado">Coderhouse</span> y estoy creando mi
+                portfolio para mostrar mi progreso como futura profesional del
+                <span class="resaltado">desarrollo web</span>. Me apasiona
+                combinar creatividad y funcionalidad para construir experiencias
+                digitales memorables.
               </p>
               <ul>
-                <li>Diseño y maquetación responsive.</li>
-                <li>Portfolios personales y sitios corporativos.</li>
-                <li>Tiendas online simples y funcionales.</li>
-                <li>Asesoramiento en estructura y usabilidad.</li>
+                <li>Aprendizaje continuo en tecnologías web modernas.</li>
+                <li>Enfoque en diseño responsivo y experiencia de usuario.</li>
+                <li>
+                  Habilidades en HTML, CSS, JavaScript y frameworks básicos.
+                </li>
               </ul>
             </div>
             <div class="imagen flex-item">
               <img
-                src="img/mis-servicios.avif"
-                alt="Servicios de desarrollo web"
+                src="../img/sobre-mi.avif"
+                alt="Desarrolladora web ilustración"
               />
             </div>
           </div>
         </section>
       </main>
-
       <!-- Footer -->
       <footer class="grid-footer">
         <p>&copy; 2025 Noelia Caballero. Todos los derechos reservados.</p>
