"Proyecto completo para entrega final"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!--Encabezado-->
@@ -56,6 +57,12 @@
               <img src="img/inicio.avif" alt="Ilustración Desarrollo Web" />
             </div>
           </div>
+        </section>
+        <!-- Frase para agregar sass -->
+        <section class="frase">
+          <blockquote>
+            <p>"Cada línea de código me acerca más a mi futuro."</p>
+          </blockquote>
         </section>
       </main>
       <!-- Footer -->
