--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -74,6 +75,11 @@
               </form>
             </div>
           </div>
+        </section>
+        <section class="frase">
+          <blockquote>
+            <p>"Las mejores conexiones comienzan con un simple mensaje."</p>
+          </blockquote>
         </section>
       </main>
 
