--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -8,7 +8,14 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -46,12 +53,68 @@
               </p>
             </div>
             <div class="imagen flex-item">
-              <img
-                src="../img/mis-proyectos.avif"
-                alt="Proyectos web ilustración"
-              />
+              <div
+                id="carouselProyectos"
+                class="carousel slide"
+                data-bs-ride="carousel"
+              >
+                <div class="carousel-inner rounded">
+                  <div class="carousel-item active">
+                    <img
+                      src="../img/mis-proyectos-1.jpg"
+                      class="d-block w-100"
+                      alt="Proyecto 1"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="../img/mis-proyectos-2.jpg"
+                      class="d-block w-100"
+                      alt="Proyecto 2"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="../img/mis-proyectos-3.jpg"
+                      class="d-block w-100"
+                      alt="Proyecto 3"
+                    />
+                  </div>
+                </div>
+                <!-- Controles -->
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselProyectos"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselProyectos"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                </button>
+              </div>
             </div>
           </div>
+        </section>
+        <section class="frase">
+          <blockquote>
+            <p>
+              "Cada proyecto es un paso más hacia el futuro que estoy
+              construyendo."
+            </p>
+          </blockquote>
         </section>
       </main>
 
@@ -60,5 +123,7 @@
         <p>&copy; 2025 Noelia Caballero. Todos los derechos reservados.</p>
       </footer>
     </div>
+    <!-- Bootstrap JS (requerido para el carrusel) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
