--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -57,6 +58,11 @@
               />
             </div>
           </div>
+        </section>
+        <section class="frase">
+          <blockquote>
+            <p>"Transformo ideas en soluciones digitales con propósito."</p>
+          </blockquote>
         </section>
       </main>
 
