--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <div class="grid-container">
@@ -59,6 +60,12 @@
               />
             </div>
           </div>
+        </section>
+        <!-- Frase para agregar sass -->
+        <section class="frase">
+          <blockquote>
+            <p>"Crear con pasión y propósito, una línea de código a la vez."</p>
+          </blockquote>
         </section>
       </main>
       <!-- Footer -->
