--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Servicios | Noelia Caballero</title>
+    <!-- SEO Básico -->
+    <title>Servicios | Noelia Caballero - Desarrolladora Web Front-End</title>
+    <meta
+      name="description"
+      content="Servicios de desarrollo web front-end por Noelia Caballero. Diseño responsive, portfolios, sitios corporativos y tiendas online en HTML y CSS."
+    />
+    <meta
+      name="keywords"
+      content="servicios desarrollo web, diseño responsive, portfolio, tienda online, HTML, CSS, Noelia Caballero"
+    />
+    <meta name="author" content="Noelia Caballero" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta
+      property="og:title"
+      content="Servicios | Noelia Caballero - Desarrolladora Web Front-End"
+    />
+    <meta
+      property="og:description"
+      content="Descubre los servicios de diseño y desarrollo web ofrecidos por Noelia Caballero: responsive design, portfolios, sitios corporativos y tiendas online."
+    />
+    <meta
+      property="og:image"
+      content="https://TU-DOMINIO.com/img/mis-servicios.avif"
+    />
+    <meta
+      property="og:url"
+      content="https://TU-DOMINIO.com/pages/servicios.html"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Estilos -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
