--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre mí | Noelia Caballero</title>
+    <!-- SEO Básico -->
+    <title>Sobre Mí | Noelia Caballero - Desarrolladora Web Front-End</title>
+    <meta
+      name="description"
+      content="Conoce a Noelia Caballero, desarrolladora web front-end en formación. Pasión por el diseño responsive, experiencia de usuario y tecnologías web modernas."
+    />
+    <meta
+      name="keywords"
+      content="Noelia Caballero, sobre mí, desarrolladora web, front-end, HTML, CSS, JavaScript, Coderhouse, diseño responsive"
+    />
+    <meta name="author" content="Noelia Caballero" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta
+      property="og:title"
+      content="Sobre Mí | Noelia Caballero - Desarrolladora Web Front-End"
+    />
+    <meta
+      property="og:description"
+      content="Descubre la historia, habilidades y motivación de Noelia Caballero, desarrolladora web en formación."
+    />
+    <meta
+      property="og:image"
+      content="https://TU-DOMINIO.com/img/sobre-mi.avif"
+    />
+    <meta
+      property="og:url"
+      content="https://TU-DOMINIO.com/pages/sobre-mi.html"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Estilos -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
