--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio | Noelia Caballero</title>
+    <!-- SEO Básico -->
+    <title>Portfolio de Noelia Caballero | Desarrolladora Web Front-End</title>
+    <meta
+      name="description"
+      content="Portfolio de Noelia Caballero, desarrolladora web front-end. Proyectos en HTML, CSS, diseño responsive y buenas prácticas de desarrollo web."
+    />
+    <meta
+      name="keywords"
+      content="Noelia Caballero, desarrollo web, front-end, HTML, CSS, responsive, portfolio, diseño web"
+    />
+    <meta name="author" content="Noelia Caballero" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta
+      property="og:title"
+      content="Portfolio de Noelia Caballero | Desarrolladora Web Front-End"
+    />
+    <meta
+      property="og:description"
+      content="Descubre los proyectos y trabajos de Noelia Caballero en desarrollo web front-end."
+    />
+    <meta
+      property="og:image"
+      content="https://TU-DOMINIO.com/img/inicio.avif"
+    />
+    <meta property="og:url" content="https://TU-DOMINIO.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Estilos -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -51,6 +82,13 @@
                 herramientas utilizadas y el crecimiento aplicado en cada
                 proyecto. Gracias por estar acá. ¡Te invito a explorar y
                 descubrir cada detalle!
+              </p>
+              <p>
+                Aquí vas a encontrar ejemplos de sitios realizados con HTML y
+                CSS, organizados con buenas prácticas de codificación y un
+                enfoque responsive. Cada sección está pensada para facilitar el
+                recorrido y permitirte conocer el estilo, las herramientas
+                utilizadas y mi evolución como profesional.
               </p>
             </div>
             <div class="imagen flex-item">
