--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyectos | Noelia Caballero</title>
+    <!-- SEO Básico -->
+    <title>Proyectos | Noelia Caballero - Desarrolladora Web Front-End</title>
+    <meta
+      name="description"
+      content="Proyectos web desarrollados por Noelia Caballero. Ejemplos de sitios responsivos, portfolios y tiendas online creados con HTML, CSS y Bootstrap."
+    />
+    <meta
+      name="keywords"
+      content="proyectos desarrollo web, HTML, CSS, Bootstrap, diseño responsive, portfolio, tiendas online, Noelia Caballero"
+    />
+    <meta name="author" content="Noelia Caballero" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Proyectos | Noelia Caballero - Desarrolladora Web Front-End"
+    />
+    <meta
+      property="og:description"
+      content="Descubre los proyectos creados por Noelia Caballero: sitios web responsivos, portfolios y tiendas online en HTML, CSS y Bootstrap."
+    />
+    <meta
+      property="og:image"
+      content="https://TU-DOMINIO.com/img/mis-proyectos-1.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://TU-DOMINIO.com/pages/proyectos.html"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
+    <!-- Estilos propios -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
@@ -63,21 +97,21 @@
                     <img
                       src="../img/mis-proyectos-1.jpg"
                       class="d-block w-100"
-                      alt="Proyecto 1"
+                      alt="Vista previa del funcionamiento del código"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="../img/mis-proyectos-2.jpg"
                       class="d-block w-100"
-                      alt="Proyecto 2"
+                      alt="Vista previa escribiendo un código"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="../img/mis-proyectos-3.jpg"
                       class="d-block w-100"
-                      alt="Proyecto 3"
+                      alt="Código HTML"
                     />
                   </div>
                 </div>
