actualizo HTMLs y estilos finales del proyecto

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
     />
     <meta
       property="og:image"
-      content="https://TU-DOMINIO.com/img/inicio.avif"
+      content="https://portfolio-desarrolladora-web.vercel.app/img/inicio.avif"
     />
-    <meta property="og:url" content="https://TU-DOMINIO.com/" />
+    <meta
+      property="og:url"
+      content="https://portfolio-desarrolladora-web.vercel.app/"
+    />
     <meta property="og:type" content="website" />
 
     <!-- Fuentes -->
@@ -82,13 +85,6 @@
                 herramientas utilizadas y el crecimiento aplicado en cada
                 proyecto. Gracias por estar acá. ¡Te invito a explorar y
                 descubrir cada detalle!
-              </p>
-              <p>
-                Aquí vas a encontrar ejemplos de sitios realizados con HTML y
-                CSS, organizados con buenas prácticas de codificación y un
-                enfoque responsive. Cada sección está pensada para facilitar el
-                recorrido y permitirte conocer el estilo, las herramientas
-                utilizadas y mi evolución como profesional.
               </p>
             </div>
             <div class="imagen flex-item">
