--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,11 +27,11 @@
     />
     <meta
       property="og:image"
-      content="https://TU-DOMINIO.com/img/contacto-preview.jpg"
+      content="https://portfolio-desarrolladora-web.vercel.app/img/contacto-preview.jpg"
     />
     <meta
       property="og:url"
-      content="https://TU-DOMINIO.com/pages/contacto.html"
+      content="https://portfolio-desarrolladora-web.vercel.app/pages/contacto.html"
     />
     <meta property="og:type" content="website" />
 
