--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -27,11 +27,11 @@
     />
     <meta
       property="og:image"
-      content="https://TU-DOMINIO.com/img/mis-proyectos-1.jpg"
+      content="https://portfolio-desarrolladora-web.vercel.app/img/mis-proyectos-1.jpg"
     />
     <meta
       property="og:url"
-      content="https://TU-DOMINIO.com/pages/proyectos.html"
+      content="https://portfolio-desarrolladora-web.vercel.app/pages/proyectos.html"
     />
     <meta property="og:type" content="website" />
 
@@ -63,7 +63,7 @@
       <nav class="grid-nav">
         <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
-        <a href="proyectos.html">Proyectos</a>
+        <a href="proyectos.html" class="active">Proyectos</a>
         <a href="servicios.html">Servicios</a>
         <a href="contacto.html">Contacto</a>
       </nav>
