--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -27,11 +27,11 @@
     />
     <meta
       property="og:image"
-      content="https://TU-DOMINIO.com/img/mis-servicios.avif"
+      content="https://portfolio-desarrolladora-web.vercel.app/img/mis-servicios.avif"
     />
     <meta
       property="og:url"
-      content="https://TU-DOMINIO.com/pages/servicios.html"
+      content="https://portfolio-desarrolladora-web.vercel.app/pages/servicios.html"
     />
     <meta property="og:type" content="website" />
 
@@ -58,7 +58,7 @@
         <a href="../index.html">Inicio</a>
         <a href="sobre-mi.html">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
-        <a href="servicios.html">Servicios</a>
+        <a href="servicios.html" class="active">Servicios</a>
         <a href="contacto.html">Contacto</a>
       </nav>
 
