--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -27,11 +27,11 @@
     />
     <meta
       property="og:image"
-      content="https://TU-DOMINIO.com/img/sobre-mi.avif"
+      content="https://portfolio-desarrolladora-web.vercel.app/img/sobre-mi.avif"
     />
     <meta
       property="og:url"
-      content="https://TU-DOMINIO.com/pages/sobre-mi.html"
+      content="https://portfolio-desarrolladora-web.vercel.app/pages/sobre-mi.html"
     />
     <meta property="og:type" content="website" />
 
@@ -55,7 +55,7 @@
       <!-- Navegación -->
       <nav class="grid-nav">
         <a href="../index.html">Inicio</a>
-        <a href="sobre-mi.html">Sobre Mí</a>
+        <a href="sobre-mi.html" class="active">Sobre Mí</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="servicios.html">Servicios</a>
         <a href="contacto.html">Contacto</a>
